--- a/index.html
+++ b/index.html
@@ -1566,3 +1566,6 @@ toggleBtn.addEventListener('mouseleave', () => {
 </style>
 <a href="test.html">PRUEBA</a>
 
+<head>
+<meta name="google-site-verification" content="TjB9SWFveZH2qDINHyNkW0yyU_JO_W9-3o5xTpqtTtQ" />
+</head>
