Fix typo in DISTRIBUCIÓN link text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <a href="#inicio" class="nav-link-yellow active">INICIO</a>
     <a href="#servicios" class="nav-link-yellow">SERVICIOS</a>
     <a href="#colaboradores" class="nav-link-yellow">COLABORADORES</a>
-    <a href="#distribucion" class="nav-link-yellow">DISTRIBUCIÓN</a>
+    <a href="#distribucion" class="nav-link-yellow">ssDISTRIBUCIÓN</a>
     <!-- LÍNEA NUEVA QUE AÑADES -->
     <a href="colaborar.html" class="nav-link-yellow">¿BUSCAS TRABAJAR?</a>
 
