Update text in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                         <div class="inline-flex items-center justify-center w-20 h-20 bg-yellow-500/20 rounded-2xl mb-4 border border-yellow-500/30">
                             <i class="fas fa-gift text-yellow-400 text-3xl"></i>
                         </div>
-                        <h3 class="text-2xl font-black mb-2 text-white">MODELO GRATUITO</h3>
+                        <h3 class="text-2xl font-black mb-2 text-white">OPORTUNIDAD ARTISTAS</h3>
                         <div class="text-4xl font-black mb-2 text-yellow-500">0€</div>
                         <p class="text-gray-400">Sin inversión inicial</p>
                     </div>
@@ -628,7 +628,7 @@
                     <div class="space-y-4 mb-8">
                         <div class="flex items-start">
                             <i class="fas fa-check text-yellow-500 mt-1 mr-3"></i>
-                            <span class="text-gray-300">Todos los servicios de producció musical y visualn</span>
+                            <span class="text-gray-300">Todos los servicios de producció musical y visual</span>
                         </div>
                         <div class="flex items-start">
                             <i class="fas fa-check text-yellow-500 mt-1 mr-3"></i>
@@ -643,7 +643,7 @@
                     <div class="bg-yellow-500/10 rounded-xl p-4 mb-8 border border-yellow-500/20">
                         <h4 class="font-bold text-yellow-400 mb-2">CONDICIÓN PRINCIPAL</h4>
                         <p class="text-yellow-300 text-sm">
-                            Kurtus Inc retiene el 100% de los derechos de autor
+                            Proponer una idea clara
                         </p>
                     </div>
                     
@@ -665,7 +665,7 @@
                             <i class="fas fa-crown text-black text-3xl"></i>
                         </div>
                         <h3 class="text-2xl font-black mb-2 text-white">MODELO PREMIUM</h3>
-                        <div class="text-4xl font-black mb-2 text-yellow-400">Desde 299€</div>
+                        <div class="text-4xl font-black mb-2 text-yellow-400">PERSONALIZABLE€</div>
                         <p class="text-yellow-300">Inversión por proyecto</p>
                     </div>
                     
