--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                     <div class="space-y-4 mb-8">
                         <div class="flex items-start">
                             <i class="fas fa-check text-yellow-500 mt-1 mr-3"></i>
-                            <span class="text-gray-300">Todos los servicios de producció musical y visual</span>
+                            <span class="text-gray-300">Todos los servicios de producción musical y visual</span>
                         </div>
                         <div class="flex items-start">
                             <i class="fas fa-check text-yellow-500 mt-1 mr-3"></i>
@@ -643,7 +643,7 @@
                     <div class="bg-yellow-500/10 rounded-xl p-4 mb-8 border border-yellow-500/20">
                         <h4 class="font-bold text-yellow-400 mb-2">CONDICIÓN PRINCIPAL</h4>
                         <p class="text-yellow-300 text-sm">
-                            Proponer una idea clara
+                            Proponer una vision clara
                         </p>
                     </div>
                     
@@ -665,7 +665,7 @@
                             <i class="fas fa-crown text-black text-3xl"></i>
                         </div>
                         <h3 class="text-2xl font-black mb-2 text-white">MODELO PREMIUM</h3>
-                        <div class="text-4xl font-black mb-2 text-yellow-400">PERSONALIZABLE€</div>
+                        <div class="text-4xl font-black mb-2 text-yellow-400">PERSONALIZABLE</div>
                         <p class="text-yellow-300">Inversión por proyecto</p>
                     </div>
                     
