Fix typo in 'SERVICIOS' link text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!-- Cámbialo por esto (añadiendo la línea nueva): -->
 <div class="flex flex-wrap justify-center gap-2 lg:gap-6">
     <a href="#inicio" class="nav-link-yellow active">INICIO</a>
-    <a href="#servicios" class="nav-link-yellow">SERVICfffIOS</a>
+    <a href="#servicios" class="nav-link-yellow">SERVICIOS</a>
     <a href="#colaboradores" class="nav-link-yellow">COLABORADORES</a>
     <a href="#distribucion" class="nav-link-yellow">ssDISTRIBUCIÓN</a>
     <!-- LÍNEA NUEVA QUE AÑADES -->
